--- a/config.toml
+++ b/config.toml
@@ -17,30 +17,12 @@ highlight_theme = "boron"
 
 [extra]
 
-# One of: blue, green, orange, pink, red.
-# Defaults to blue.
 accent_color = "orange"
-
-# One of: blue, dark, green, orange, pink, red.
-# Enabling dark background will also modify primary font color
-# to be darker.
-# Defaults to accent color (or, if not accent color specified, to blue).
 background_color = "orange"
 
-# The logo text - defaults to "Terminimal theme"
 logo_text = "Revinder"
-
-# The logo link - defaults to base_url.
-# logo_home_link = "/take/me/away!"
-
-# Author name: when specified, modifies the default
-# copyright text. Apart from author, it will
-# contain current year and a link to the theme.
+favicon = "/fav-icon.png"
 author = "Revinder"
-
-# Copyright text in HTML format. If specified,
-# entirely replaces default copyright and author.
-# copyright_html = "&nbsp;<b>copyright</b>"
 
 menu_items = [
     {name = "Blog", url = "$BASE_URL"},
