--- a/config.toml
+++ b/config.toml
@@ -6,9 +6,7 @@ title = "RevinderDev Blog"
 compile_sass = true
 
 # Optional: enable tags
-taxonomies = [
-    {name = "tags"}
-]
+taxonomies = [{ name = "tags" }]
 
 # Code highlighting
 [markdown]
@@ -25,14 +23,13 @@ favicon = "/fav-icon.png"
 author = "Revinder"
 
 menu_items = [
-    {name = "Blog", url = "$BASE_URL"},
+    { name = "Blog", url = "$BASE_URL" },
 
-    {name = "Tags", url = "$BASE_URL/tags"},
-    {name = "Archive", url = "$BASE_URL/archive"},
-    {name = "About me", url = "$BASE_URL/about"},
+    { name = "Tags", url = "$BASE_URL/tags" },
+    { name = "Archive", url = "$BASE_URL/archive" },
+    { name = "About me", url = "$BASE_URL/about" },
 
-    {name = "GitHub", url = "https://github.com/RevinderDev", newtab = true},
-    {name = "Twitter", url = "https://twitter.com/Revinder_", newtab = true},
+    { name = "GitHub", url = "https://github.com/RevinderDev", newtab = true },
 ]
 
 enable_post_view_navigation = true
