--- a/config.toml
+++ b/config.toml
@@ -12,6 +12,11 @@ taxonomies = [{ name = "tags" }]
 [markdown]
 highlight_code = true
 highlight_theme = "gruvbox-dark"
+github_alerts = false
+
+[markdown.render_code]
+layout = "table"
+extra_attr = ["data-lang", "data-name"]
 
 [extra]
 
