--- a/theme.toml
+++ b/theme.toml
@@ -1,21 +1,7 @@
-name = "terminimal"
-description = "A simple, minimal retro theme"
-license = "MIT"
-homepage = "https://github.com/pawroman/zola-theme-terminimal"
-min_version = "0.11.0"
-
-# An optional live demo URL
-demo = "https://pawroman.github.io/zola-theme-terminimal/"
-
 [author]
-name = "Paweł Romanowski"
-homepage = "https://github.com/pawroman"
+name = "Michał Kasprzyk"
+homepage = "https://github.com/revinderdev"
 
-# The original theme this one's been forked off.
-[original]
-author =  "Radosław Kozieł"
-homepage = "https://radoslawkoziel.pl/"
-repo = "https://github.com/panr/hugo-theme-terminal"
 
 [extra]
 
