--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 # Be sure to change these!
-base_url = "https://revinderdev.github.io/"
+base_url = "https://revinder.dev/"
 title = "Revinder Blog"
 description = "Personal blog of Revinder"
 default_language = "en"
